--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run Lint
-        run: ./gradlew lintDebug
+        run: chmod +x ./gradlew lintDebug
 
       - name: Upload html test report
         uses: actions/upload-artifact@v3
