--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -29,5 +30,23 @@ jobs:
       - name: Upload html test report
         uses: actions/upload-artifact@v3
         with:
-          name: index.html
+          name: lint.html
           path: app/build/reports/lint-results-debug.html
+
+  unit-test:
+    needs: [lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v3
+
+      - name: Run tests
+        run: ./gradlew test
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v3
+        with:
+         name: unit-test-report
+         path: app/build/reports/tests/testDebugUnitTest/
+
+
