--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,20 +69,22 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-         distribution: 'adopt'
-         java-version: '17'
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
       - name: Run espresso tests
         uses: reactivecircus/android-emulator-runner@v3
-        run: ./gradlew connectedCheck
+        with:
+          api-level: 29
+          script: ./gradlew connectedCheck
 
       - name: Upload test report
         uses: actions/upload-artifact@v3
         with:
-         name: unit-test-report
-         path: app/build/reports/androidTests/connected/debug
+          name: unit-test-report
+          path: app/build/reports/androidTests/connected/debug
 
 
