added static code analysis stage.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
+
+systemProp.sonar.sources=./src/main
+systemProp.sonar.host.url=https://sonarcloud.io/
+systemProp.sonar.organization=rakibhasan1030
+systemProp.sonar.projectKey=rakibhasan1030_TipCalculator
+systemProp.sonar.projectName=TipCalculator
