--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ android.nonTransitiveRClass=true
 
 systemProp.sonar.host.url=https://sonarcloud.io/
 systemProp.sonar.organization=rakibhasan1030
-systemProp.sonar.projectKey=rakibhasan1030_TipCalculator
+systemProp.sonar.projectKey=rakibhasan1030:TipCalculator:master
 systemProp.sonar.projectName=TipCalculator
