added static code analysis stage.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,16 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+#      - name: SonarCloud Scan
+#        run: ./gradlew sonar -Dsonar.login=$SONAR_TOKEN
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: SonarCloud Scan
-        run: ./gradlew sonar -Dsonar.login=$SONAR_TOKEN
+        uses: sonarsource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+            args: >
+              -Dsonar.organization=rakibhasan1030
+              -Dsonar.projectKey=TipCalculator
