added static code analysis stage.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,16 +111,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-#      - name: SonarCloud Scan
-#        run: ./gradlew sonar -Dsonar.login=$SONAR_TOKEN
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
+        run: ./gradlew sonar -Dsonar.login=dccd67298a29494c2e4a68a8c011644b7215caea
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-            args: >
-              -Dsonar.organization=rakibhasan1030
-              -Dsonar.projectKey=TipCalculator
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
