--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 
-#systemProp.sonar.host.url=https://sonarcloud.io/
-#systemProp.sonar.organization=rakibhasan1030
-#systemProp.sonar.projectKey=rakibhasan1030:TipCalculator:master
-#systemProp.sonar.projectName=TipCalculator
+systemProp.sonar.host.url=https://sonarcloud.io/
+systemProp.sonar.organization=rakibhasan1030
+systemProp.sonar.projectKey=rakibhasan1030:TipCalculator:master
+systemProp.sonar.projectName=TipCalculator
