--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ android.nonTransitiveRClass=true
 
 systemProp.sonar.host.url=https://sonarcloud.io/
 systemProp.sonar.organization=rakibhasan1030
+systemProp.sonar.projectKey=rakibhasan1030_TipCalculator
+systemProp.sonar.projectName=TipCalculator
