--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,16 +102,19 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'adopt'
-          java-version: '17'
+      - name: Run static-code-analysis
+        run: echo Run static-code-analysis
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: SonarCloud Scan
-        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'adopt'
+#          java-version: '17'
+#
+#      - name: Make gradlew executable
+#        run: chmod +x ./gradlew
+#
+#      - name: SonarCloud Scan
+#        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
