--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,3 +118,29 @@ jobs:
 #        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  package:
+    needs: [static-code-analysis]
+    name: Generate APK
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+            distribution: 'adopt'
+            java-version: '17'
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: tip-calculator.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
