--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD
 
 on:
   push:
@@ -102,45 +102,47 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
 
-      - name: Run static-code-analysis
-        run: echo Run static-code-analysis
-
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'adopt'
-#          java-version: '17'
-#
-#      - name: Make gradlew executable
-#        run: chmod +x ./gradlew
-#
-#      - name: SonarCloud Scan
-#        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  package:
-    needs: [static-code-analysis]
-    name: Generate APK
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
+#      - name: Run static-code-analysis
+#        run: echo Run static-code-analysis
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-            distribution: 'adopt'
-            java-version: '17'
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Build debug APK
-        run: ./gradlew assembleDebug --stacktrace
+      - name: SonarCloud Scan
+        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: tip-calculator.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+#  package:
+#    needs: [static-code-analysis]
+#    name: Generate APK
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout the code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#            distribution: 'adopt'
+#            java-version: '17'
+#
+#      - name: Make gradlew executable
+#        run: chmod +x ./gradlew
+#
+#      - name: Build debug APK
+#        run: ./gradlew assembleDebug --stacktrace
+#
+#      - name: Upload APK
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: tip-calculator.apk
+#          path: app/build/outputs/apk/debug/app-debug.apk
+#          tag: v1.0.${{ github.run_number }}
+#          token: ${{ secrets.TOKEN }}
