--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 
-#systemProp.sonar.host.url=https://sonarcloud.io/
-#systemProp.sonar.organization=rakibhasan1030
-#systemProp.sonar.projectKey=rakibhasan1030_TipCalculator
-#systemProp.sonar.projectName=TipCalculator
+systemProp.sonar.host.url=https://sonarcloud.io/
+systemProp.sonar.organization=rakibhasan1030
+systemProp.sonar.projectKey=rakibhasan1030_TipCalculator
+systemProp.sonar.projectName=TipCalculator
