--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,22 +102,22 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
 
-#      - name: Run static-code-analysis
-#        run: echo Run static-code-analysis
+      - name: Run static-code-analysis
+        run: echo Run static-code-analysis
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: SonarCloud Scan
-        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'adopt'
+#          java-version: '17'
+#
+#      - name: Make gradlew executable
+#        run: chmod +x ./gradlew
+#
+#      - name: SonarCloud Scan
+#        run: ./gradlew sonar -Dsonar.token=$SONAR_TOKEN
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 #  package:
 #    needs: [static-code-analysis]
@@ -145,4 +145,4 @@ jobs:
 #          name: tip-calculator.apk
 #          path: app/build/outputs/apk/debug/app-debug.apk
 #          tag: v1.0.${{ github.run_number }}
-#          token: ${{ secrets.TOKEN }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
