--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,5 +144,14 @@ jobs:
         with:
           name: tip-calculator.apk
           path: app/build/outputs/apk/debug/app-debug.apk
-          tag: v1.0.${{ github.run_number }}
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v1.0.${{ github.run_number }}
+          release_name: Release v1.0.${{ github.run_number }}
+          body: |
+            Release notes for v1.0.${{ github.run_number }}.
+          draft: false
+          prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
