--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,15 +145,15 @@ jobs:
           name: tip-calculator.apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
-      - name: Create Release
+      - name: Create release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Or use your personal access token
         with:
-          files: app/build/outputs/apk/debug/app-debug.apk
           tag_name: v1.0.${{ github.run_number }}
           release_name: Release v1.0.${{ github.run_number }}
           body: |
-            Release notes for v1.0.${{ github.run_number }}.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            **Release notes for v1.0.${{ github.run_number }}**
+            (Add release notes here)
+            draft: false
+            prerelease: false
