--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,12 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
 
+      - name: Download APK artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: tip-calculator.apk
+          path: app/build/outputs/apk/debug/
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -166,13 +172,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-#      - name: Upload Release Asset
-#        id: upload-release-asset
-#        uses: actions/upload-release-asset@v1
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: app/build/outputs/apk/debug/
-#          asset_name: tip-calculator.apk
-#          asset_content_type: application/zip
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload APK as Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: app/build/outputs/apk/debug/app-debug.apk
+          asset_name: tip-calculator.apk
+          asset_content_type: application/vnd.android.package-archive
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
